--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="phone">Phone</string>
     <string name="logout">Logout</string>
     <string name="profile">Profile</string>
+    <string name="back">back</string>
 </resources>
