--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="logout">Logout</string>
     <string name="profile">Profile</string>
     <string name="back">back</string>
+    <string name="retry">Retry</string>
 </resources>
