--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="profile">Profile</string>
     <string name="back">back</string>
     <string name="retry">Retry</string>
+    <string name="explore_genre_movie">Explore more genre movie</string>
 </resources>
