--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="back">back</string>
     <string name="retry">Retry</string>
     <string name="explore_genre_movie">Explore more genre movie</string>
+    <string name="menu">menu</string>
 </resources>
