--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="menu">menu</string>
     <string name="date">Date</string>
     <string name="image_news">Image News</string>
+    <string name="movie_not_found">Movie not found</string>
 </resources>
