--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="image_news">Image News</string>
     <string name="movie_not_found">Movie not found</string>
     <string name="press_back_again">Tekan sekali lagi untuk keluar</string>
+    <string name="power_by">Power by</string>
 </resources>
